For the latest news, visit the SparForte web site.

Objective:

CHANGES SINCE 2.4

1. New: doubly_linked_lists.parcel.
